# maviriq

./: .env.example  .gitignore  AE.CAP.md  CAPSTONE_DOCUMENTATION.md  IMPLEMENTATION.md  README.md  langgraph.json  main.py  package-lock.json  pyproject.toml  supabase_schema.sql  test_api.py
.langgraph_api/: .langgraph_ops.pckl
frontend/: next.config.ts  package-lock.json  package.json  sentry.client.config.ts
frontend/messages/: en.json  lt.json
frontend/src/: instrumentation-client.ts  middleware.ts  proxy.ts
frontend/src/__tests__/: api.test.ts  competitors.test.tsx  confirm-modal.test.tsx  detail-section.test.tsx  error-boundary.test.tsx  fixtures.ts  history-page.test.tsx  idea-form.test.tsx  nav.test.tsx  pain-points.test.tsx  pipeline-progress.test.tsx  verdict-badge.test.tsx  viability.test.tsx
frontend/src/app/: global-error.tsx  globals.css  layout.tsx  page.tsx
frontend/src/components/: competitors.tsx  confirm-modal.tsx  detail-section.tsx  error-boundary.tsx  graveyard-research.tsx  idea-form.tsx  market-intelligence.tsx  nav.tsx  offline-banner.tsx  pain-points.tsx  pipeline-progress.tsx  providers.tsx  synthesis.tsx  verdict-badge.tsx  viability.tsx
frontend/src/hooks/: use-network-status.ts
frontend/src/i18n/: request.ts
src/maverick/: config.py  main.py  supabase_client.py
src/maviriq/: config.py  main.py  supabase_client.py
tests/: conftest.py  test_agents.py  test_api.py  test_pipeline.py  test_schemas.py  test_services.py  test_storage.py  test_tool_loop.py
tests/evals/: conftest.py  harness.py  test_eval_pipeline.py
(+71 files in other folders)
