[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maviriq"
version = "0.1.0"
description = "Idea validation pipeline — 4-agent research system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.78.0",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.128.4",
    "httpx>=0.28.1",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.4.0",
    "langsmith>=0.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "redis>=5.0.0",
    "PyJWT>=2.8.0",
    "sse-starlette>=2.1.0",
    "stripe>=11.0.0",
    "supabase>=2.0.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["src/maviriq"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
